[tool.poetry]
name = "cvae"
version = "0.1.0"
description = ""
authors = ["igor-cheb <imadmeister@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "3.10.12"
torch = "^2.2.0"
jupyter = "^1.0.0"
pytorch-lightning = "^2.2.0.post0"
matplotlib = "^3.8.3"
seaborn = "^0.13.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
